# genre-identifier-rs

./: .gitignore  Cargo.toml  README.md
src/: concurrency.rs  db.rs  logger.rs  main.rs  openai.rs  rate_limit.rs  retry.rs  structs.rs
src/llms/: llama2.rs  mod.rs
